# remprotocol

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README_components.puml  eos.doxygen.in  pipeline.jsonc  testnet.template
.cicd/: build.sh  generate-base-images.sh  generate-pipeline.sh  test.sh
CMakeModules/: installer.cmake  package.cmake
bootstrap/: genesis.json  mainnet_bootstrap.py  resign.py  start_bootnode.py  start_producers.py  testnet_bootstrap.py
contracts/: CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh
debian/: postinst
plugins/: CMakeLists.txt
plugins/rem_oracle_plugin/: CMakeLists.txt  http_client.cpp  rem_oracle_plugin.cpp
plugins/rem_oracle_plugin/include/eosio/rem_oracle_plugin/: http_client.hpp  rem_oracle_plugin.hpp
scripts/: .build_vars  eosio_build.sh  generate_bottle.sh
tests/: CMakeLists.txt  Cluster.py  Node.py  db_modes_test.sh  get_table_tests.cpp  nodeos_multiple_version_protocol_feature_test.py  nodeos_producer_watermark_test.py  nodeos_run_test.py  nodeos_under_min_avail_ram.py  p2p_network_test.py  p2p_stress.py  prod_preactivation_test.py  testUtils.py
unittests/: CMakeLists.txt  abi_tests.cpp  api_tests.cpp  auth_tests.cpp  bootseq_tests.cpp  contracts.hpp.in  currency_tests.cpp  delay_tests.cpp  eosio.token_tests.cpp  eosio_system_tester.hpp  forked_tests.cpp  gift_resources_test.cpp  misc_tests.cpp  protocol_feature_tests.cpp  punish_prod_tests.cpp  ram_tests.cpp  rem_account_price_test.cpp  rem_attr_test.cpp  rem_auth_tests.cpp  rem_oracle_tests.cpp  rem_rewards_test.cpp  rem_rotation_test.cpp  (+4 more)
(+118 files in other folders)
